--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,16 @@ spring:
     user:
       name: user
       password: 1234
+
+  h2:
+    console:
+      enabled: true
+  datasource:
+      driver-class-name: org.h2.Driver
+      url: jdbc:h2:mem:odiga
+
+  jpa:
+      show-sql: true
+      generate-ddl: true
+      hibernate:
+        ddl-auto: create-drop
